--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "slaxweb/session",
     "description": "SlaxWeb Session Library",
     "license": "GPLv3",
+    "version": "0.1.0",
     "authors": [
         {
             "name": "Tomaz Lovrec",
             "email": "tomaz.lovrec@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
 		"php":	">=5.3.0"
     },
@@ -19,8 +19,7 @@
 	},
 	"extra":	{
 		"branch-alias": {
-            "dev-master": "0.1.1.x-dev",
-			"dev-develop": "0.1.0.x-dev"
+			"dev-develop": "0.1.x-dev"
 		}
 	},
     "target-dir": "SlaxWeb/Session"
