--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "slaxweb/session",
     "description": "SlaxWeb Session Library",
-    "license": "GPLv3",
+    "license": "MIT",
     "version": "0.1.0",
     "authors": [
         {
