--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "name": "slaxweb/session",
-    "description": "SlaxWeb Session Library",
+    "description": "SlaxWeb Framework Session Component",
     "license": "MIT",
-    "version": "0.2.0",
     "authors": [
         {
             "name": "Tomaz Lovrec",
@@ -10,17 +9,19 @@
         }
     ],
     "require": {
-		"php":	">=5.3.0"
+        "php":  ">=7.0.0",
+        "slaxweb/config": "dev-develop",
+        "symfony/http-foundation": "~3.0"
     },
-	"autoload":	{
-		"psr-0": {
-			"SlaxWeb\\Session": ""
-		}
-	},
-	"extra":	{
-		"branch-alias": {
-			"dev-develop": "0.4.x-dev"
-		}
-	},
-    "target-dir": "SlaxWeb/Session"
+    "autoload": {
+        "psr-4": {
+            "SlaxWeb\\Session\\": "src/"
+        }
+    },
+    "extra":    {
+        "branch-alias": {
+            "dev-develop": "0.4.x-dev"
+        }
+    },
+    "minimum-stability": "dev"
 }
