--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php":  ">=7.0.0",
-        "slaxweb/config": "dev-develop",
+        "slaxweb/config": "~0.2",
         "symfony/http-foundation": "~3.0"
     },
     "autoload": {
@@ -20,8 +20,7 @@
     },
     "extra":    {
         "branch-alias": {
-            "dev-develop": "0.4.x-dev"
+            "dev-master": "0.5.x-dev"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
