--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php":  ">=7.0.0",
-        "slaxweb/config": "~0.2",
+        "slaxweb/config": "dev-release/0.3.0",
         "symfony/http-foundation": "~3.0"
     },
     "autoload": {
@@ -20,7 +20,7 @@
     },
     "extra":    {
         "branch-alias": {
-            "dev-master": "0.5.x-dev"
+            "dev-master": "0.6.x-dev"
         }
     }
 }
